--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
 
+spring.datasource.url=jdbc:mysql://localhost:3306/college
+spring.datasource.user=college-admin
+spring.datasource.password=imfa1796
