--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
-spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 spring.datasource.url=jdbc:mysql://localhost:3306/college
-spring.datasource.user=college-admin
-spring.datasource.password=imfa1796
+spring.datasource.username=root
+spring.datasource.password=imfA1796!
